--- a/Uobachi.WebClient/Pages/Home.razor
+++ b/Uobachi.WebClient/Pages/Home.razor
@@ -1,7 +1,26 @@
 ﻿@page "/"
+@using Uobachi.Domain
+@using Uobachi.WebClient.Signals
+@using static Signals.Prelude
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
+Me: @me.Value
+Logged in?: @isLoggedIn.Value
+
 Welcome to your new app.
+
+@code
+{
+    private WritableSignal<User?> me;
+
+    private Signal<bool> isLoggedIn;
+
+    protected override async Task OnInitializedAsync()
+    {
+        me = Signal(default(User?));
+        isLoggedIn = Computed(() => me.Value is not null);
+    }
+}
